<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="135dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="35dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_Cadastrar"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="341dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_depositar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_Depositar"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="341dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_sacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_Sacar"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="454dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_extrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_Extrato"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="454dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_transferencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_Transferencia"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="454dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_log"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="339dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>